# the-chaos

./: .gitignore  .gitmodules  README.md
cpp/: README.md
cpp/client_server/: .gitignore  CMakeLists.txt  makefile
cpp/client_server/tinyserver/: CMakeLists.txt  README.md  common.h  main.cpp  makefile  server.cpp  server.h
cpp/csv_parser/: README.md  data2.csv  parser  parser.cpp
cpp/function/: CMakeLists.txt  README.md  main.cpp  makefile
cpp/minidbg/: .gitignore  CMakeLists.txt  README.md
cpp/minilog/: .gitignore  CMakeLists.txt  QA.md  README.md  main.cpp  makefile  minilog.h
cpp/ps-lite/: README.md
cpp/rang/: README.md  rang.cpp
cpp/result.cpp/: README.md  result.cpp
cpp/smart_pointer/: README.md  smart_pointer.cpp
cpp/thread_pool/: README.md  thread_pool.cpp
fixed_heap/: Cargo.toml
fixed_heap/src/: lib.rs
futex/: Cargo.toml
go/http_builder/: README.md  go.mod  main.go
python/s3fifo/: s3fifo.py
rust/async_channel/: README.md
rust/ava-bot/: .gitignore  Cargo.toml  README.md  api.rest  makefile  package-lock.json  package.json  tailwind.config.js
rust/ava-bot/public/css/: main.css
rust/ava-bot/src/: main.rs
rust/ava-bot/src/handlers/: assistant.rs  chats.rs  common.rs  mod.rs
rust/ava-bot/templates/: base.html.j2  index.html.j2
rust/channel/: README.md
rust/chatbot-ui/: Cargo.toml  README.md
rust/client_server/: Cargo.toml  README.md
rust/daemonize/: Cargo.toml  README.md
rust/dufs/: Cargo.toml  README.md
rust/finite_state_machine/: Cargo.toml  README.md
rust/fixed_heap/: README.md
rust/futex/: README.md
rust/icelake/: Cargo.toml  README.md
rust/llm-sdk/: .gitignore  Cargo.toml  README.md
rust/llm-sdk/src/: lib.rs  middleware.rs
rust/llm-sdk/src/api/: chat_completion.rs  create_image.rs  embedding.rs  mod.rs  speech.rs  transcription.rs  whisper.rs
rust/mini_editor/: Cargo.toml  README.md
rust/offsetof/: Cargo.toml  README.md
rust/parser/: README.md
rust/path_parser/: Cargo.toml  README.md
rust/pipeline-execution/: Cargo.toml  README.md
rust/prompt-manager/: Cargo.toml  README.md
unix_signal/: Cargo.toml  README.md
(+71 files in other folders)
