[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json", "gzip", "multipart"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
async-trait = "0.1.74"
schemars = "0.8.16"
bytes = "1.5.0"
strum = { version = "0.24.0", features = ["derive"] }

[dev-dependencies]
ctor = "0.2.5"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
